# mucas

./: .gitignore  MUCAS_SPEC_v0.1.md  README.md  README_CN.md  bench_coverage_curve.py  bench_crossfile.py  bench_crossfile_logs.py  bench_rai.py  gen_log_corpus.py  pyproject.toml  test_mucas.py
.github/workflows/: release.yml
installers/linux/: install.sh
installers/macos/: install.sh
installers/macos/Pack with μCAS.workflow/Contents/: Info.plist  document.wflow
installers/macos/Unpack μCAS archive.workflow/Contents/: Info.plist  document.wflow
installers/windows/: install.bat  uninstall.bat
mucas/: __init__.py  compress.py  consensus.py  corpus.py  format.py  vm.py
mucas-rs/: BENCHMARK.md  Cargo.toml  README.md  RELEASE_POST.md
mucas-rs/src/: archive.rs  consensus_builder.rs  format.rs  lib.rs  lz.rs  main.rs  pipeline.rs  sched.rs  synth.rs
