[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mucas"
version = "0.1.0"
description = "Micro Compression Assembly — deterministic bytecode compression language"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["compression", "bytecode", "lz", "entropy-coding"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mucas*"]
